--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
                     
                     <div class="inputs">
                         <label for="empresa">Empresa</label>
-                        <input type="text" name="empresa" required placeholder="Empresa">
+                        <input type="text" name="empresa" required placeholder="Empresa LTDA">
                         <label for="name">Nome</label>
-                        <input type="text" name="name" required placeholder="Nome">
+                        <input type="text" name="name" required placeholder="João Maria da Silva">
                         <label for="email">Coloque seu e-mail</label>
-                        <input type="text" name="email" required placeholder="E-mail">
+                        <input type="text" name="email" required placeholder="joão@email.com">
                         <div class="classificacaoEmpresa">
                             <div class="qtd">
                                 <label for="qtd-funcionario">Nº de Funcionários na empresa</label>
@@ -43,19 +43,20 @@
                         <div class="contatoEmpresa">
                             <div class="seuSite">
                                 <label for="site">Site</label>
-                                <input type="text" name="site" required id="site">
+                                <input type="text" name="site" required id="site" placeholder="Insira a URL do seu Website">
                             </div>
                             <div class="zapZap">
                                 <label for="whats">WhatsApp</label>
-                                <input type="text" name="whats" required id="whats">
+                                <input type="text" name="whats" required id="whats"
+                                placeholder="(XX)1234-5678">
                             </div>
                         </div>
                         <label for="cnpj">CNPJ</label>
-                        <input type="text" name="cnpj" required id="cnpj">
+                        <input type="text" name="cnpj" required id="cnpj" placeholder="12.345.678/0001-23">
                         <label for="subject">Qual o motivo do seu contato</label>
                         <input type="text" name="subject" required placeholder="Assunto">
                         <label for="phone">Número para contato</label>
-                        <input type="text" name="phone" placeholder="Número de telefone">
+                        <input type="text" name="phone" placeholder="(XX)9 1234-5678">
                         <div class="mensagem">
                             <label for="msg">Descreva aqui o motivo do contato com mais detalhes</label>
                             <textarea name="msg" required placeholder="Mensagem"></textarea>
